--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "vue-pdf",
-  "version": "4.0.7",
-  "description": "vue.js pdf viewer",
+  "name": "vue-pdf-wm",
+  "version": "1.0.1",
+  "description": "vue.js pdf viewer watermark",
   "main": "src/vuePdfNoSss.vue",
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/FranckFreiburger/vue-pdf.git"
+    "url": "git+https://github.com/PoisonousMilkPowder/vue-pdf.git"
   },
   "keywords": [
     "vue.js",
     "pdf",
     "viewer"
   ],
-  "author": "Franck FREIBURGER",
+  "author": "PoisonousMilkPowder",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/FranckFreiburger/vue-pdf/issues"
+    "url": "https://github.com/PoisonousMilkPowder/vue-pdf/issues"
   },
-  "homepage": "https://github.com/FranckFreiburger/vue-pdf#readme",
+  "homepage": "https://github.com/PoisonousMilkPowder/vue-pdf#readme",
   "dependencies": {
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "loader-utils": "^1.2.3",
